--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0px;
 	font-family: Arial, Helvetica, sans-serif;
-  height: 2000px;
+	height: 2000px;
 }
 
 h1,
@@ -104,7 +104,7 @@ img {
 .introducao-bg {
 	background: #000000;
 	color: #ffffff;
-  box-shadow: inset 0 -120px #ffffff;
+	box-shadow: inset 0 -120px #ffffff;
 }
 
 .introducao {
@@ -125,9 +125,9 @@ img {
 }
 
 .introducao img {
-  height: 100%;
-  object-fit: cover;
-  border-radius: 4px;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 4px;
 }
 
 .introducao h1 {
@@ -153,13 +153,56 @@ img {
 	border-radius: 4px;
 	background: linear-gradient(#ffbf00, #f2a50c);
 	box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
-  text-transform: uppercase;
-  color: #332200;
-  font-size: 18px;
-  line-height: 1.33;
-  font-weight: bold;
+	text-transform: uppercase;
+	color: #332200;
+	font-size: 18px;
+	line-height: 1.33;
+	font-weight: bold;
 }
 
 .introducao a:hover {
-	background: linear-gradient(#ffb60d, #e59317)
+	background: linear-gradient(#ffb60d, #e59317);
+}
+
+@media (max-width: 600px) {
+	.introducao a {
+    padding: 12px 16px;
+    font-size: 16px;
+	}
+}
+
+@media (max-width: 1200px) {
+	.introducao h1 {
+		font-size: 48px;
+	}
+
+	.introducao p {
+		font-size: 18px;
+	}
+}
+
+@media (max-width: 800px) {
+	.introducao-bg {
+		background: #111111;
+		padding-top: 40px;
+		box-shadow: inset 0 -60px #ffffff;
+	}
+
+	.introducao {
+		grid-template-columns: 1fr;
+		gap: 32px;
+	}
+	.introducao-conteudo {
+		padding-bottom: 0px;
+	}
+
+	.introducao h1 {
+		font-size: 32px;
+		margin-bottom: 16px;
+	}
+
+	.introducao img {
+		height: 300px;
+		width: 100%;
+	}
 }
