:recycle: refactor: passando para css utilitario

--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-	background-color: #000000;
+	background-color: var(--cor-12);
 }
 
 .header {
@@ -23,7 +23,6 @@
 
 .header-menu a {
 	font-size: 18px;
-	color: #ffffff;
 	padding: 16px 0px;
 	display: inline-block;
 	position: relative;
@@ -36,7 +35,7 @@
 	display: block;
 	height: 2px;
 	width: 0;
-	background: linear-gradient(270deg, #ffffff, #17161d);
+	background: linear-gradient(270deg, var(--cor-0), #17161d);
 	margin-top: 4px;
 	transition: 0.3s;
 	position: absolute;
@@ -51,13 +50,13 @@
 		gap: 20px;
 	}
 	.header-menu a {
-		background: #111111;
+		background: var(--cor-11);
 		padding: 12px 16px;
 		border-radius: 4px;
 	}
 
 	.header-menu a:hover {
-		background: #2e2e2e;
+		background: var(--cor-10);
 	}
 
 	.header a:after {
