--- a/css/global/global.css
+++ b/css/global/global.css
@@ -6,6 +6,8 @@ body {
 }
 
 h1,
+h2,
+h3,
 ul,
 p {
 	margin: 0;
@@ -24,4 +26,8 @@ a {
 img {
 	max-width: 100%;
 	display: block;
+}
+
+img[src$=".jpg"] {
+	border-radius: 4px;
 }
