:sparkles: feat: area de seguros

--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,10 +1,10 @@
 .container {
 	max-width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
+	padding-left: 20px;
+	padding-right: 20px;
+	box-sizing: border-box;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* Botao */
@@ -17,10 +17,21 @@
 	text-transform: uppercase;
 	color: var(--cor-p5);
 	font: 600 1.125rem/1.35 'Poppins', sans-serif;
+	max-width: max-content;
 }
 
 .botao:hover {
 	background: linear-gradient(#ffb60d, #e59317);
+}
+
+.botao.secundario {
+	background: var(--cor-10);
+	color: var(--cor-2);
+}
+
+.botao.secundario:hover {
+	background: var(--cor-9);
+	color: var(--cor-2);
 }
 
 @media (max-width: 600px) {
@@ -47,5 +58,5 @@
 
 .link:hover {
 	color: var(--cor-0);
-	transition: .2s;
+	transition: 0.2s;
 }
