--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -10,7 +10,7 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-  max-height: 680px;
+  max-height: 520px;
 }
 
 .depoimento-conteudo {
@@ -20,7 +20,7 @@
 
 .depoimento-conteudo p {
 	max-width: 25ch;
-	font-family: 'Merriweather', serif;
+	font-family: "Merriweather", serif;
 	font-style: italic;
 	font-weight: 900;
 	margin-bottom: 32px;
@@ -29,6 +29,7 @@
 
 .depoimento p::before,
 .depoimento p::after {
+	font-family: "Merriweather", serif;
   font-size: 5rem;
 	color: var(--cor-p2);
 	position: absolute;
