--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -60,3 +60,27 @@
 	color: var(--cor-0);
 	transition: 0.2s;
 }
+
+
+/* Titulo das paginas internas */
+.titulo-bg {
+	background-color: var(--cor-11);
+	padding-top: 60px;
+	padding-bottom: 60px;
+}
+
+.titulo p {
+	margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+	.titulo-bg {
+		padding-top: 40px;
+		padding-bottom: 40px;
+	}
+
+	.titulo p {
+		font-size: 1rem;
+		font-weight: 400;
+	}
+}
