--- a/css/home/depoimento.css
+++ b/css/home/depoimento.css
@@ -10,12 +10,12 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-  max-height: 520px;
 }
 
 .depoimento-conteudo {
 	padding: 40px 40px 80px 80px;
 	align-self: end;
+	background: url('../../img/dec/bottom-right-p.svg') no-repeat bottom 40px right 40px;
 }
 
 .depoimento-conteudo p {
@@ -45,6 +45,11 @@
 	content: '”';
 }
 
+@media (min-width: 1200px) {
+	.depoimento img {
+		max-height: 520px;
+	}
+}
 
 @media (max-width: 800px) {
   .depoimento {
